src/v7/CAPI_Reactors.pas

unit CAPI_Reactors;

{$inline on}

interface

uses
    CAPI_Utils;

procedure Reactors_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger); CDECL;
function Reactors_Get_Name(): PAnsiChar; CDECL;
procedure Reactors_Set_Name(const Value: PAnsiChar); CDECL;
function Reactors_Get_First(): Integer; CDECL;
function Reactors_Get_Next(): Integer; CDECL;
function Reactors_Get_Count(): Integer; CDECL;
function Reactors_Get_kV(): Double; CDECL;
procedure Reactors_Set_kV(Value: Double); CDECL;
function Reactors_Get_kvar(): Double; CDECL;
procedure Reactors_Set_kvar(Value: Double); CDECL;
function Reactors_Get_Phases(): Integer; CDECL;
procedure Reactors_Set_Phases(Value: Integer); CDECL;
function Reactors_Get_SpecType(): Integer; CDECL;
function Reactors_Get_IsDelta(): Boolean; CDECL;
procedure Reactors_Set_IsDelta(Value: Boolean); CDECL;
function Reactors_Get_Parallel(): Boolean; CDECL;
procedure Reactors_Set_Parallel(Value: Boolean); CDECL;
function Reactors_Get_LmH(): Double; CDECL;
procedure Reactors_Set_LmH(Value: Double); CDECL;
function Reactors_Get_Bus1(): PAnsiChar; CDECL;
function Reactors_Get_Bus2(): PAnsiChar; CDECL;
procedure Reactors_Set_Bus1(const Value: PAnsiChar); CDECL;
procedure Reactors_Set_Bus2(const Value: PAnsiChar); CDECL;
function Reactors_Get_R(): Double; CDECL;
procedure Reactors_Set_R(Value: Double); CDECL;
function Reactors_Get_X(): Double; CDECL;
procedure Reactors_Set_X(Value: Double); CDECL;
function Reactors_Get_Rp(): Double; CDECL;
procedure Reactors_Set_Rp(Value: Double); CDECL;
function Reactors_Get_RCurve(): PAnsiChar; CDECL;
procedure Reactors_Set_RCurve(const Value: PAnsiChar); CDECL;
function Reactors_Get_LCurve(): PAnsiChar; CDECL;
procedure Reactors_Set_LCurve(const Value: PAnsiChar); CDECL;
procedure Reactors_Get_Rmatrix(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
procedure Reactors_Get_Rmatrix_GR(); CDECL;
procedure Reactors_Set_Rmatrix(ValuePtr: PDouble; ValueCount: Integer); CDECL;
procedure Reactors_Get_Xmatrix(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
procedure Reactors_Get_Xmatrix_GR(); CDECL;
procedure Reactors_Set_Xmatrix(ValuePtr: PDouble; ValueCount: Integer); CDECL;
procedure Reactors_Get_Z(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
procedure Reactors_Get_Z_GR(); CDECL;
procedure Reactors_Set_Z(ValuePtr: PDouble; ValueCount: Integer); CDECL;
procedure Reactors_Get_Z1(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
procedure Reactors_Get_Z1_GR(); CDECL;
procedure Reactors_Set_Z1(ValuePtr: PDouble; ValueCount: Integer); CDECL;
procedure Reactors_Get_Z2(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
procedure Reactors_Get_Z2_GR(); CDECL;
procedure Reactors_Set_Z2(ValuePtr: PDouble; ValueCount: Integer); CDECL;
procedure Reactors_Get_Z0(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
procedure Reactors_Get_Z0_GR(); CDECL;
procedure Reactors_Set_Z0(ValuePtr: PDouble; ValueCount: Integer); CDECL;
function Reactors_Get_idx(): Integer; CDECL;
procedure Reactors_Set_idx(Value: Integer); CDECL;


implementation

uses
    CAPI_Constants,
    DSSGlobals,
    DSSClass,
    DSSHelper,
    Executive,
    Reactor,
    SysUtils,
    PointerList,
    Utilities,
    ucomplex;

//------------------------------------------------------------------------------
function ActiveReactor(out e: TReactorObj): TReactorObj; inline;
begin
    e := NIL;
    if ActiveCircuit <> NIL then
        e := ActiveCircuit.Reactors.Active;
    Result := e;
end;
//------------------------------------------------------------------------------
procedure ReactorPropSideEffects(prop: TReactorProp; reactor: TReactorObj);
begin
    with reactor do
    begin
    // Some specials ...
        case prop of
            TReactorProp.bus1:
            begin
                PropertyValue[2] := GetBus(2);   // this gets modified
                PrpSequence^[2] := 0;       // Reset this for save function
            end;
            TReactorProp.bus2:
                if CompareText(StripExtension(GetBus(1)), StripExtension(GetBus(2))) <> 0 then
                begin
                    IsShunt := FALSE;
                    Bus2Defined := TRUE;
                end;
            TReactorProp.phases: //IF Fnphases <> Parser.IntValue THEN 
            begin
            // Nphases := Parser.IntValue ;
                NConds := nphases;  // Force Reallocation of terminal info
                Yorder := Fnterms * Fnconds;
            end;
            TReactorProp.kvar:
                SpecType := 1;   // X specified by kvar, kV
            TReactorProp.Rmatrix, TReactorProp.Xmatrix:
                SpecType := 3;
            TReactorProp.X:
                SpecType := 2;   // X specified directly rather than computed from kvar
            TReactorProp.Rp:
                RpSpecified := TRUE;
            TReactorProp.Z1:
            begin
                SpecType := 4;    // have to set Z1 to get this mode
                if not Z2Specified then
                    Z2 := Z1;
                if not Z0Specified then
                    Z0 := Z1;
            end;
            TReactorProp.Z2:
                Z2Specified := TRUE;
            TReactorProp.Z0:
                Z0Specified := TRUE;
            TReactorProp.Z:
            begin
                R := Z.re;
                X := Z.im;
                SpecType := 2;
            end;
            TReactorProp.RCurve:
                RCurveObj := DSSPrime.XYCurveClass.Find(RCurve);
            TReactorProp.LCurve:
                LCurveObj := DSSPrime.XYCurveClass.Find(LCurve);
            TReactorProp.LmH:
            begin
                SpecType := 2;
                X := L * TwoPi * BaseFrequency;
            end
        else
        end;

    //YPrim invalidation on anything that changes impedance values
        case prop of
            TReactorProp.phases..TReactorProp.Z:
                YprimInvalid := TRUE;
            TReactorProp.RCurve:
                if RCurveObj = NIL then
                    DoSimpleMsg('Resistance-frequency curve XYCurve.' + RCurve + ' not Found.', 2301);
            TReactorProp.LCurve:
                if LCurveObj = NIL then
                    DoSimpleMsg('Inductance-frequency curve XYCurve.' + LCurve + ' not Found.', 2301);
            TReactorProp.LmH:
                YprimInvalid := TRUE;
        else
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Reactors_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger); CDECL;
var
    Result: PPAnsiCharArray;
begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    if ActiveCircuit = NIL then
        Exit;
    Generic_Get_AllNames(ResultPtr, ResultCount, ActiveCircuit.Reactors, False);
end;
//------------------------------------------------------------------------------
function Reactors_Get_First(): Integer; CDECL;
var
    elem: TReactorObj;
    lst: TPointerList;
begin
    Result := 0;
    if ActiveCircuit = NIL then
        exit;
    lst := ActiveCircuit.Reactors;
    elem := lst.First;
    if elem <> NIL then
    begin
        repeat
            if elem.Enabled then
            begin
                ActiveCircuit.ActiveCktElement := elem;
                Result := 1;
            end
            else
                elem := lst.Next;
        until (Result = 1) or (elem = NIL);
    end;
end;
//------------------------------------------------------------------------------
function Reactors_Get_Name_AnsiString(): Ansistring; inline;
var
    elem: TReactorObj;
begin
    Result := '';
    if ActiveReactor(elem) = NIL then
        exit;
    Result := elem.Name;
end;

function Reactors_Get_Name(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Reactors_Get_Name_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Name(const Value: PAnsiChar); CDECL;
begin
    if ActiveCircuit = NIL then
        Exit;
    if DSSPrime.ReactorClass.SetActive(Value) then
    begin
        ActiveCircuit.ActiveCktElement := DSSPrime.ReactorClass.ElementList.Active;
        ActiveCircuit.Reactors.Get(DSSPrime.ReactorClass.Active);
    end
    else
    begin
        DoSimpleMsg('Reactor "' + Value + '" Not Found in Active Circuit.', 5003);
    end;
end;
//------------------------------------------------------------------------------
function Reactors_Get_Next(): Integer; CDECL;
var
    elem: TReactorObj;
    lst: TPointerList;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        lst := ActiveCircuit.Reactors;
        elem := lst.Next;
        if elem <> NIL then
        begin
            repeat
                if elem.Enabled then
                begin
                    ActiveCircuit.ActiveCktElement := elem;
                    Result := lst.ActiveIndex;
                end
                else
                    elem := lst.Next;
            until (Result > 0) or (elem = NIL);
        end
    end;
end;
//------------------------------------------------------------------------------
function Reactors_Get_Count(): Integer; CDECL;
begin
    Result := 0;
    if Assigned(ActiveCircuit) then
        Result := ActiveCircuit.Reactors.ListSize;
end;
//------------------------------------------------------------------------------
function Reactors_Get_Bus1_AnsiString(): Ansistring; inline;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    Result := pReactor.GetBus(1);
end;

function Reactors_Get_Bus1(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Reactors_Get_Bus1_AnsiString());
end;
//------------------------------------------------------------------------------
function Reactors_Get_Bus2_AnsiString(): Ansistring; inline;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    Result := pReactor.GetBus(2);
end;

function Reactors_Get_Bus2(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Reactors_Get_Bus2_AnsiString());
end;
//------------------------------------------------------------------------------
function Reactors_Get_LCurve_AnsiString(): Ansistring; inline;
var
    pReactor: TReactorObj;
begin
    Result := '';
    if ActiveReactor(pReactor) = NIL then
        exit;
    Result := pReactor.LCurve;
end;

function Reactors_Get_LCurve(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Reactors_Get_LCurve_AnsiString());
end;
//------------------------------------------------------------------------------
function Reactors_Get_RCurve_AnsiString(): Ansistring; inline;
var
    pReactor: TReactorObj;
begin
    Result := '';
    if ActiveReactor(pReactor) = NIL then
        exit;
    Result := pReactor.RCurve;
end;
